@@ -65,7 +65,7 @@ sub init($)
 }
 
 #-------------------------------------------
-=section Accessors
+=section Attributes
 =cut
 
 #-------------------------------------------
